----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-12-17 Michal Cihar  <ilovetranslations@cihar.com>
    * lang/sync_lang.sh: Fix generation of translation, when source is in
      utf-8.
    * lang/chinese_big5.inc.php: Was broken due to above bug, thanks Marc for
      noticing this.

2003-12-16 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/lithuanian: Updated, thanks to Vilius Zigmantas (viliusz).

2003-12-15 Garvin Hicking  <me@supergarv.de>
    * tbl_replace.php: Check all required array indizes for multi-row edit

2003-12-15 Marc Delisle  <lem9@users.sourceforge.net>
    * read_dump.php: bug 859062: Go & Bookmark problem when the
      query has a character like "+" in it

2003-12-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_query_box.php, ldi_table.php: maximum upload size
    * tbl_change.php: max BLOB upload size

2003-12-12 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details.php, libraries/common.lib.php, lang/*: 
      new feature to display the maximum upload size
      TODO: detect if upload succeeded

2003-12-12 Garvin Hicking <juststayalittlebitlonger@supergarv.de>
    * export.php: Fixed Regex
    * transformation_wrapper.php, lang/*, libraries/display_tbl.lib.php,
      libraries/transformations/application_octetstream__download.inc.php:
      Added a new transformation to download blob/binary field contents
      with customized filenames. Needed two minor tweeks to the general
      system.

2003-12-11 Michal Cihar  <imreallyaway@cihar.com>
    * libraries/export/sql.php: Fix moving foreign key definition on Windows
      (bug #851950).

2003-12-11 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_replace.php: missing number of rows for Affected rows
      and Inserted rows; wrong message for insert ids
    * libraries/display_tbl.lib.php: bug 857743, SHOW DATABASES

2003-12-11 Alexander M. Turek  <bleibtallesanders@derrabus.de>