@@ -5,6 +5,11 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-12-18 Marc Delisle  <lem9@users.sourceforge.net>
+    * tbl_relation.php: bug 860258: do not destroy foreign key references
+      to another db (still cannot enter via phpMyAdmin this kind of
+      references)
+
 2003-12-17 Michal Cihar  <ilovetranslations@cihar.com>
     * lang/sync_lang.sh: Fix generation of translation, when source is in
       utf-8.
